<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="cv_information_title">Nom</string>
    <string name="cv_information_adresse">Adresse</string>
    <string name="cv_information_telephone">Numéro de téléphone</string>
    <string name="cv_information_fb">Lien Facebook</string>
    <string name="icon_localisation_description">icon localisation</string>
    <string name="icon_telephone_description">icon_telephone</string>
    <string name="icon_language_description">icon_language</string>
    <string name="cv_description_title">A propos de moi</string>
    <string name="cv_content_description">Quanta autem vis amicitiae sit, ex hoc intellegi maxime potest, quod ex infinita societate generis humani, quam conciliavit ipsa natura, ita contracta res est et adducta in angustum ut omnis caritas aut inter duos aut inter paucos iungeretur.</string>
    <string name="neighbour_avatar_description">Neighbour avatar</string>
    <string name="garbage_icon_description">Garbage icon</string>
    <string name="no_neighbours_information">You have no neighbours</string>
    <string name="no_favorites_description">You have no favorites</string>
</resources>
